crates/toml_edit/fixtures/invalid/string/multiline-bad-escape-2.stderr
TOML parse error at line 2, column 11
  |
2 | k = """t\ t"""
  |           ^
Invalid escape sequence
Expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
